--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@ I am broadly interested in Statistical Learning for data science with a current 
 <h2>News</h2>
 
 <ul>
-<li><p>博士生杨光成功获国家公派留学资格，拟于阿尔伯塔大学进行博士联合培养. </p>
+<li><p>PhD student Yang Guang has successfully obtained the national scholarship to study abroad and plans to conduct joint doctoral training program at University of Alberta. </p>
 </li>
 </ul>
 
 <ul>
-<li><p>我们的一篇论文被Techonometrics接收. </p>
+<li><p>Our paper on handling tumor heterogeneity has been accepted by Techonometrics. </p>
 </li>
 </ul>
 
 <ul>
-<li><p>杨光的硕士论文获江苏省优秀硕士论文.</p>
+<li><p>Yang Guang's master's thesis was awarded as an excellent master's thesis in Jiangsu Province.</p>
 </li>
 </ul>
 <ul>
-<li><p>我们的一篇论文被 IEEE Transactions on Neural Networks and Learning Systems接收.</p>
+<li><p>Our paper on non-convex distributed learning has been accepted by IEEE Transactions on Neural Networks and Learning Systems.</p>
 </li>
 </ul>
 <ul>
-<li><p>我们的一篇论文被Statistics in Medicine接收. </p>
+<li><p>Our paper on shape mediation analysis in Alzheimer’s Disease Studies has been accepted by Statistics in Medicine. </p>
 </li>
 </ul>
 <ul>
