--- a/paper.html
+++ b/paper.html
@@ -83,7 +83,7 @@
 </ul>
 
 <ul>
-<li><p><font color=Blue >The Alzheimer’s Disease Neuroimaging Initiative; Shape Mediation Analysis in Alzheimer’s Disease Studies</font><br /> <b>X.C. Zhou</b>,  M. Yeon, J. Wang, S. Ding, K. Lei, Y.Y. Zhao, R.J. Liu & C. Huang
+<li><p><font color=Blue >Shape Mediation Analysis in Alzheimer’s Disease Studies</font><br /> <b>X.C. Zhou</b>,  M. Yeon, J. Wang, S. Ding, K. Lei, Y.Y. Zhao, R.J. Liu, C. Huang & ADNI
 <br />
 <i>Statistics in Medicine, 43:5698–5710, 2024.</i>
 </p>
