--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I am broadly interested in Statistical Learning for data science with a current 
 <h2>News</h2>
 
 <ul>
-<li><p>PhD student Yang Guang has successfully obtained the national scholarship to study abroad and plans to conduct joint doctoral training program at University of Alberta. </p>
+<li><p>PhD student Guang Yang has successfully obtained the national scholarship to study abroad and plans to conduct joint doctoral training program at University of Alberta. </p>
 </li>
 </ul>
 
@@ -75,7 +75,7 @@ I am broadly interested in Statistical Learning for data science with a current 
 </ul>
 
 <ul>
-<li><p>Yang Guang's master's thesis was awarded as an excellent master's thesis in Jiangsu Province.</p>
+<li><p>Guang Yang's master's thesis was awarded as an excellent master's thesis in Jiangsu Province.</p>
 </li>
 </ul>
 <ul>
