--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ I am broadly interested in Statistical Learning for data science with a current 
 </ul>
 
 <ul>
-<li><p>Guang Yang's master's thesis was awarded as an excellent master's thesis in Jiangsu Province.</p>
+<li><p>Guang Yang's master thesis was awarded as an excellent master's thesis in Jiangsu Province.</p>
 </li>
 </ul>
 <ul>
