--- a/paper.html
+++ b/paper.html
@@ -33,12 +33,7 @@
 </li>
 </ul>
 
-<ul>
-<li><p><font color=Blue >Functional Linear Operator Quantile Regression for Sparse Longitudinal Data</font><br /> <b>X.C. Zhou</b>, T.Y. Lai & L.L. Kong
-<br />
-</p>
-</li>
-</ul>
+
 
 <ul>
 <li><p><font color=Blue >Communication-efficient and privacy-preserving multi-site learning and score test for ordered response logit model based on electronic health record data for heart failure</font><br /> <b>X.C. Zhou</b>, & H.Y. Chen
@@ -57,9 +52,17 @@
 </ul>
 
 <ul>
+<li><p><font color=Blue >Functional Linear Operator Quantile Regression for Sparse Longitudinal Data</font><br /> <b>X.C. Zhou</b>, T.Y. Lai & L.L. Kong
+<br />
+<i>Statistica Sinica, 2025+ (accepted)</i>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><font color=Blue >Communication-efficient non-convex distributed learning with error feedback for uplink and downlink</font><br /> <b>X.C. Zhou</b>, Le Chang & Jinde Cao
 <br />
-<i>IEEE Transactions on Neural Networks and Learning Systems, 2025+, https://ieeexplore.ieee.org/document/10327766</i>
+<i>IEEE Transactions on Neural Networks and Learning Systems, 2025, 36(1): 1003-1014</i>
 </p>
 </li>
 </ul>
