--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@ I am broadly interested in Statistical Learning for data science with a current 
 <h2>News</h2>
 
 <ul>
+<li><p>Our paper on functional data analysis has been accepted by Statistica Sinica on January 6, 2025. </p>
+</li>
+</ul>
+
+<ul>
 <li><p>PhD student Guang Yang has successfully obtained the national scholarship to study abroad and plans to conduct joint doctoral training program at University of Alberta. </p>
 </li>
 </ul>
