--- a/paper_topic.html
+++ b/paper_topic.html
@@ -43,6 +43,14 @@
 </ul>
 
 <ul>
+<li><p><font color=Blue >Functional Linear Operator Quantile Regression for Sparse Longitudinal Data</font><br /> <b>X.C. Zhou</b>, T.Y. Lai & L.L. Kong
+<br />
+<i>Statistica Sinica, 2025+ (accepted)</i>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><font color=Blue >Shape Mediation Analysis in Alzheimer’s Disease Studies</font><br /> <b>X.C. Zhou</b>,  M. Yeon, J. Wang, S. Ding, K. Lei, Y.Y. Zhao, R.J. Liu, C. Huang & ADNI
 <br />
 <i>Statistics in Medicine, 43:5698–5710, 2024.</i>
@@ -95,7 +103,7 @@
 <ul>
 <li><p><font color=Blue >Communication-efficient non-convex distributed learning with error feedback for uplink and downlink</font><br /> <b>X.C. Zhou</b>, Le Chang & Jinde Cao
 <br />
-<i>IEEE Transactions on Neural Networks and Learning Systems, 2025+, https://ieeexplore.ieee.org/document/10327766</i>
+<i>IEEE Transactions on Neural Networks and Learning Systems, 2025, 36(1): 1003-1014</i>
 </p>
 </li>
 </ul>
