--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I am broadly interested in Statistical Learning for data science with a current 
 <h2>News</h2>
 
 <ul>
-<li><p>Our paper on functional data analysis has been accepted by Statistica Sinica on January 6, 2025. </p>
+<li><p>Our paper on functional quantile regression has been accepted by Statistica Sinica on January 6, 2025. </p>
 </li>
 </ul>
 
