--- a/group.html
+++ b/group.html
@@ -28,6 +28,7 @@
 <ul>
 <li><p>Guang Yang (2023级)</p>
 <li><p>Zhaoyang Jing (2024级)</p>
+<li><p>Wenhui Liu (2025级)</p>
 </ul>
 
 </div>
@@ -78,20 +79,27 @@
 <li><p>Zhao, W.T., 2022级专硕，毕业工作：数据科技公司(南京) </b>
 <br /><font color=Blue >毕业论文</font>：<font color >基于编码-解码结构算法的皮肤病变图像分割研究</font></p>
 
-<li><p>Zheng, H.T.，2022级学硕，在读 </p>
-<li><p>Liu, X.L.，2022级学硕，在读</p>
-<li><p>Gu, Y.，2023级专硕，在读</p>
+<li><p>Zheng, H.T.，2022级学硕，毕业工作：数据科技公司(常州) </b>
+	<br /><font color=Blue >毕业论文</font>：<font color > 高斯图模型通信有效分布式迁移学习的统计推断</font></p>
+<li><p>Liu, X.L.，2022级学硕，升学：南京审计大学读博</b>
+	<br /><font color=Blue >毕业论文</font>：<font color >1 bit 矩阵补全算法的改进研究</font></p>
+<li><p>Gu, Y.，2023级专硕，毕业工作：数据科技公司(南京) </b>
+	<br /><font color=Blue >毕业论文</font>：<font color >基于时频双域的多尺度多变量时间序列预测</font></p>
 <li><p>Fan, X.C.，2023级学硕，在读</p>
+<li><p>Wang, J.D.，2024级专硕，在读 </p>
+<li><p>Xu. Z.N.，2024级专硕，在读 </p>
 <li><p>Tang, J.L.，2024级学硕，在读</p>
 <li><p>Dong, X.，2024级学硕，在读 </p>
-<li><p>Xu, Z.N.，2024级专硕，在读</p>
-<li><p>Wang, J.D.，2024级专硕，在读 </p>
+<li><p>Ren, Y.Y.，2025级专硕，在读</p>
+<li><p>Wu, Z.H., 2025级学硕，在读 </p>
+<li><p>LI, Z.Z.，2025级学硕，在读 </p>
+<li><p>Nie, J.，2025级学硕，在读 </p>
 </ul>
 
 
 <div id="footer">
 <div id="footer-text">
-Page updated 2025-01-05 10:30:30.
+Page updated 2025-12-03 10:30:30.
 </div>
 </div>
 </td>
