--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@ I am broadly interested in Statistical Learning for data science with a current 
 <h2>News</h2>
 
 <ul>
-<li><p>Our paper on functional quantile regression has been accepted by Statistica Sinica on January 6, 2025. </p>
+	<li><p>Our paper on federated learning has been accepted by TPAMI on December 1, 2025. </p>
+	</li>
+</ul>
+
+<ul>
+<li><p>Our paper on functional data analysis has been accepted by Statistica Sinica on January 6, 2025. </p>
 </li>
 </ul>
 
@@ -95,7 +100,7 @@ I am broadly interested in Statistical Learning for data science with a current 
 
 <div id="footer">
 <div id="footer-text">
-Page updated 2025-01-05 10:30:30.
+Page updated 2025-12-03 10:30:30.
 </div>
 </div>
 </td>
