--- a/paper_topic.html
+++ b/paper_topic.html
@@ -29,7 +29,7 @@
 <ul>
 <li><p><font color=Blue >Distribution-on-scalar Single-index Quantile Regression Model for Handling Tumor Heterogeneity</font><br /> <b>X.C. Zhou</b>, S. Ding, J. Wang, R. Liu, L.L. Kong & C. Huang
 <br />
-<i>Techonometrics, 2025+, https://doi.org/10.1080/00401706.2024.2441686</i>
+<i>Techonometrics, 2025, 67(2): 323-332.</i>
 </p>
 </li>
 </ul>
@@ -43,9 +43,17 @@
 </ul>
 
 <ul>
+	<li><p><font color=Blue >Reproducing kernel-based semiparametric functional smoothed score estimation with binary responses</font><br /> Liu, M., Sang, P., Yan, X., Kong, L.*, Jiang, B., <b>X.C. Zhou*</b>
+				<br />
+					<i>Journal of Computational and Graphical Statistics, 2025+ (accepted). DOI: 10.1080/10618600.2025.2574532</i>
+				</p>
+			</li>
+		</ul>
+
+<ul>
 <li><p><font color=Blue >Functional Linear Operator Quantile Regression for Sparse Longitudinal Data</font><br /> <b>X.C. Zhou</b>, T.Y. Lai & L.L. Kong
 <br />
-<i>Statistica Sinica, 2025+ (accepted)</i>
+<i>Statistica Sinica, 2025+ (accepted). DOI: 10.5705/ss.202023.0415</i>
 </p>
 </li>
 </ul>
@@ -101,12 +109,36 @@
 
 <h2>Statistical machine learning</h2>
 <ul>
+	<li><p><font color=Blue >FedFask: Fast Sketching Distributed PCA for Large-Scale Federated Data</font><br /> <b>X.C. Zhou</b>, Gang Yang, Haotian Zheng Linglong Kong & Jinde Cao
+				<br />
+					<i><b>IEEE Transactions on Pattern Analysis and Machine Intelligence</b>, 2025+ (accepted). DOI: 10.1109/TPAMI.2025.3639635 (<b>Top</b>)</i>
+				</p>
+			</li>
+		</ul>
+		
+<ul>
+	<li><p><font color=Blue >二次损失函数下大尺度可压缩深度神经网络的非参数最优性</font><br /> 吕绍高，刘伟， <b>周兴才*</b>
+				<br />
+					<i>中国科学：数学，2025+ (accepted). https://www.sciengine.com/SSM/doi/10.1360/SCM-2024-0536 </i>
+				</p>
+			</li>
+		</ul>
+
+<ul>
 <li><p><font color=Blue >Communication-efficient non-convex distributed learning with error feedback for uplink and downlink</font><br /> <b>X.C. Zhou</b>, Le Chang & Jinde Cao
 <br />
 <i>IEEE Transactions on Neural Networks and Learning Systems, 2025, 36(1): 1003-1014</i>
 </p>
 </li>
 </ul>
+
+<ul>
+	<li><p><font color=Blue >An accelerated noise-tolerant power method for fair streaming PCA with PAFO learnability</font><br /> <b>X.C. Zhou</b>,  Xiaochen Fan & Shaogao Lv
+				<br />
+					<i>Information Sciences, 2025+ (accepted)</i>
+				</p>
+			</li>
+		</ul>
 
 <ul>
 <li><p><font color=Blue >广义线性模型分布式学习的无损Score检验----多站点心力衰竭EHRs数据分析</font><br /> <b>周兴才</b>, 陈慧莹 & 林金官
@@ -354,7 +386,7 @@
 
 <div id="footer">
 <div id="footer-text">
-Page updated 2025-01-05 10:30:30.
+Page updated 2025-12-03 10:30:30.
 </div>
 </div>
 </td>
