--- a/teaching.html
+++ b/teaching.html
@@ -25,6 +25,17 @@
 <h1>Teaching</h1>
 </div>
 <ul>
+	<li><p>Autumn 2025: <font color=Blue >Statistical Foundation of Data Science</font> for PhD</p>
+	</li>
+	<li><p>Autumn 2025: <font color=Blue >Text Mining</font> for Undergraduate</p>
+	</li>
+	<li><p>Spring 2025: <font color=Blue >Neural Networks and Deep Learning</font> for Master</p>
+	</li>
+	<li><p>Spring 2025: <font color=Blue >Statistical Computation</font> for Undergraduate</p>
+	</li>
+</ul>
+
+<ul>
 <li><p>Autumn 2024: <font color=Blue >Statistical Foundation of Data Science</font> for PhD</p>
 </li>
 <li><p>Autumn 2024: <font color=Blue >Statistical Reinforcement Learning</font> for Master</p>
